<resources>
    <string name="app_name">FinanceModeling</string>

    <string name="load_error">Не удалось загрузить</string>

    <string name="five_day">5 дней</string>
    <string name="one_month">1 месяц</string>
    <string name="six_months">6 месяцев</string>
    <string name="one_year">1 год</string>
    <string name="five_years">5 лет</string>
    <string name="company_name">Имя компании:</string>
    <string name="price">Цена:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
