<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9C9C9"
    tools:context=".ui.fragments.HistoriesFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/buttons_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:columnCount="6"
            android:weightSum="5"
            android:elevation="10dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:rowCount="1">
            <RadioButton
                android:id="@+id/defFiveDay"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:background="@drawable/currency_radio_button"
                android:gravity="center"
                android:layout_gravity="fill"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:textColor="#616161"
                android:textSize="12sp"
                android:text="@string/five_day" />
            <RadioButton
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:background="@drawable/currency_radio_button"
                android:gravity="center"
                android:layout_gravity="fill"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:textColor="#616161"
                android:textSize="12sp"
                android:text="@string/one_month"/>
            <RadioButton
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:background="@drawable/currency_radio_button"
                android:gravity="center"
                android:layout_gravity="fill"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:textColor="#616161"
                android:textSize="12sp"
                android:text="@string/six_months"/>
            <RadioButton
                android:id="@+id/ch_year"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:background="@drawable/currency_radio_button"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:gravity="center"
                android:layout_gravity="fill"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:textColor="#616161"
                android:textSize="12sp"
                android:text="@string/one_year"/>
            <RadioButton
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:background="@drawable/currency_radio_button"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:gravity="center"
                android:layout_gravity="fill"
                android:layout_column="4"
                android:layout_columnWeight="1"
                android:textColor="#616161"
                android:textSize="12sp"
                android:text="@string/five_years"/>
        </RadioGroup>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/graphPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="#2C2C2C"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>